# lektury

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements-test.txt  run.sh
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py  test_readme.py
