[project]
name = "mikrus-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "pre-commit>=4.2.0",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.27.0",
    "pytest==8.4.1",
    "black==24.4.2",
    "isort==5.13.2",
]
